--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,6 +1,7 @@
 .projects-section {
   padding: 50px 20px;
-  background-color: #f9f9f9;
+  background-color: #f7f3f3;
+  color: #0b0b0b;
 }
 
 .projects-section h2 {
@@ -17,11 +18,12 @@
 
 .project-card {
   width: 250px;
-  background-color: white;
+  background-color: #ede9e9;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
+  color: #0f0f0f;
 }
 
 .project-card:hover {
