--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,7 +1,8 @@
 .skills {
   padding: 50px 20px;
-  background-color: #f5f5f5;
+  background-color: #ede9e9;
   text-align: center;
+  color: #101010;
 }
 
 .skill-icons {
@@ -17,13 +18,13 @@
   flex-direction: column;
   align-items: center;
   font-size: 2.5rem;
-  color: #333;
+  color: #0e0d0d;
   transition: transform 0.2s;
 }
 
 .skill-icons div:hover {
   transform: scale(1.1);
-  color: #007bff;
+  color: #00bfff;
 }
 
 .skill-icons span {
