--- a/src/components/Certifications/Certifications.css
+++ b/src/components/Certifications/Certifications.css
@@ -1,8 +1,9 @@
 .certifications-section {
   padding: 50px 20px;
-  background-color: #f0ebeb;
-  color: rgb(25, 25, 25);
+  background: linear-gradient(135deg, #000000, rgba(0, 188, 212, 0.05));
+  color: white;
 }
+
 
 .certifications-section h2 {
   text-align: center;
@@ -17,12 +18,13 @@
 }
 @media (prefers-color-scheme: light) {
   .certifications-section {
-    color: rgb(240, 236, 236);
+    color: white;
   }
 }
 .certification-card {
   width: 250px;
   background-color: #eae6e6;
+  color:black;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
