--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,8 +1,8 @@
 .skills {
   padding: 50px 20px;
-  background-color: #ede9e9;
+  background-color: linear-gradient(135deg, #000000, rgba(0, 188, 212, 0.05));
   text-align: center;
-  color: #101010;
+  color: white;
 }
 
 .skill-icons {
@@ -18,7 +18,7 @@
   flex-direction: column;
   align-items: center;
   font-size: 2.5rem;
-  color: #0e0d0d;
+  color: white;
   transition: transform 0.2s;
 }
 
